--- a/page5.html
+++ b/page5.html
@@ -275,8 +275,8 @@
         <pre><code id="code3">
           .container {
             display: flex;
-            justify-content: center; /* จัดแนวนอน */
-            align-items: center;     /* จัดแนวตั้ง */
+            justify-content: center;
+            align-items: center;
             gap: 10px;
           }
         </code></pre>
